<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:textSize="24sp"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:background="#E3E3E3"
        android:hint="@string/textview_result_hint"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TableLayout
        android:id="@+id/button_table_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/textView_result"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- 1行目 -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <!-- Clear ボタン -->
            <Button
                android:id="@+id/button_key_clear"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button_key_clear" />
        </TableRow>

        <!-- 2行目 -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <!-- 数字ボタン 7 -->
            <Button
                android:id="@+id/button_key_07"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button_key_07" />

            <!-- 数字ボタン 8 -->
            <Button
                android:id="@+id/button_key_08"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button_key_08" />

            <!-- 数字ボタン 9 -->
            <Button
                android:id="@+id/button_key_09"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button_key_09" />

            <!-- 除算ボタン -->
            <Button
                android:id="@+id/button_key_divide"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button_key_divide" />
        </TableRow>

        <!-- 3行目 -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <!-- 数字ボタン 4 -->
            <Button
                android:id="@+id/button_key_04"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button_key_04" />

            <!-- 数字ボタン 5 -->
            <Button
                android:id="@+id/button_key_05"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button_key_05" />

            <!-- 数字ボタン 6 -->
            <Button
                android:id="@+id/button_key_06"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button_key_06" />

            <!-- 乗算ボタン -->
            <Button
                android:id="@+id/button_key_x"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button_key_multiplication" />
        </TableRow>

        <!-- 4行目 -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <!-- 数字ボタン 1 -->
            <Button
                android:id="@+id/button_key_01"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button_key_01" />

            <!-- 数字ボタン 2 -->
            <Button
                android:id="@+id/button_key_02"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button_key_02" />

            <!-- 数字ボタン 3 -->
            <Button
                android:id="@+id/button_key_03"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button_key_03" />

            <!-- 減算ボタン -->
            <Button
                android:id="@+id/button_key_minus"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button_key_subtraction" />
        </TableRow>

        <!-- 5行目 -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <!-- 数字ボタン 0 -->
            <Button
                android:id="@+id/button_key_00"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button_key_00" />

            <!-- 加算ボタン -->
            <Button
                android:id="@+id/button_key_plus"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button_key_addition" />

            <!-- 等号ボタン -->
            <Button
                android:id="@+id/button_key_equal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button_key_equal" />
        </TableRow>
    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
